Change the URI's to URL's